--- a/Css/main.css
+++ b/Css/main.css
@@ -253,9 +253,27 @@ body {
     justify-content: center;
 }
 
-/* ! 1000px 
-@media (max-width:1000px) {
-
+/*! 1300px*/
+@media (max-width:1300px){  
+   .habilidades{
+    margin-right: 0vh;
+   }
+   .parrafo-container-habilidades{
+    margin-left: 70vh;
+   }
+}
+@media (max-width: 1200px){
+    .parrafo-container-habilidades{
+        margin-left: 65vh;
+    }
+}
+@media (max-width: 1100px){
+    .parrafo-container-habilidades{
+        margin-left: 57vh;
+    }
+}
+/*! 1000px*/
+ @media (max-width:1000px) {
    .habilidades{
     justify-content: center;
     margin-right:45px;
@@ -280,14 +298,68 @@ body {
    .paraAcomodarLasRedes{
     justify-content: end;
    }
+} 
+/*!950px*/
+@media(max-width:950px){
+    .sobre-mi-principal{
+        margin-left: 0vh;
+    }
+    .habilidades{
+        margin-right: 40vh;
+    }
+    .parrafo-container-habilidades{
+        margin-left: 25vh;
+        width: 60%;
+    }
+    .parrafo-container{
+        width: 60%;
+        margin-left:26vh ;
+    }
+    .sobre-mi-principal{
+        margin-right: 47vh;
+    }
+    .redesSociales-sobremi{
+        margin-left: 0vh;
+        margin-right: 38vh;
+    }
+    .redesSocialesSobreMi{
+        margin-left: 26vh ;
+        width: 60%;
+    }
+    .paraAcomodarLasRedes{
+        justify-content: start;
+    }
 }
-
+/*! 900px*/
+@media (max-width:900px){
+    .sobre-mi-principal{
+        margin-left: 5vh;
+    }
+    .mis-habilidades{
+        margin-right: 25vh;
+    }
+    .redesSociales-sobremi{
+        margin-left: 5vh;
+    }
+}
+/*!850px*/
+@media (max-width:850px){
+    .sobre-mi-principal{
+        margin-left: 11vh;
+    }
+    .mis-habilidades{
+        margin-right: 19vh;
+    }
+    .redesSociales-sobremi{
+        margin-left: 11vh;
+    }
+}
 /*! 800px */
-/* @media (max-width:800px) {
+@media (max-width:800px) {
 
     .habilidades{
      justify-content: start;
-     margin-right:22vh;
+     margin-right:34vh;
     }
     .parrafo-container-habilidades{
      margin-left: 25vh;
@@ -309,13 +381,20 @@ body {
     }
     .redesSocialesSobreMi{
      margin-left:25vh;
+     width: 50%;
     }
     .paraAcomodarLasRedes{
      justify-content: start;
     }
- } */
+ }
+ /*! 750px*/
+ @media (max-width:750px){
+    .habilidades{
+        margin-right: 29vh;
+    }
+ }
 /*! 700px */
-/* @media (max-width:700px){
+@media (max-width:700px){
     .sobre-mi-principal{
         
         margin-left: 23vh ;
@@ -326,7 +405,7 @@ body {
         width: 50%;
     }
     .habilidades{
-        margin-right:13vh;
+        margin-right:24vh;
     }
     .parrafo-container-habilidades{
         width: 50%;
@@ -343,40 +422,255 @@ body {
     .paraAcomodarLasRedes{
         justify-content: center;
     }
-}  */
-/*! iphone 14 pro max 430 px */
-
-@media (max-width:430px){
+} 
+/*! 650px*/
+@media (max-width:650px){
+    .sobreMi{
+        font-size: 20px;
+    }
     .sobre-mi-principal{
-        justify-content: start;
-        margin-left: 8vh;
-        margin-top: 5vh;
+        width: 23%;
+        margin-left: 17vh;
     }
     .parrafo-container{
-        width: 65%;
-        margin-left: 8vh;
-        margin-bottom: 5vh;
+        width: 60%;
+        margin-left: 17vh;
+    }
+    .habilidades{
+        font-size: 20px;
     }
     .parrafo-container-habilidades{
-        margin-left: 8vh;
+        width: 60%;
+        margin-left: 17vh;
+    }
+    .mis-habilidades{
+        margin-right: 23vh;
+    }
+    .redessobremi{
+        font-size: 20px;
+    }
+    .redesSocialesSobreMi{
+        width: 60%;
+        margin-left: 17vh;
+    }
+    .redesSociales-sobremi{
+        margin-left: 17vh;
+    }
+    .paraAcomodarLasRedes{
+        justify-content: start;
+    }
+}
+/*! 600px*/
+@media (max-width:600px){
+    .mis-habilidades{
+        margin-right:17vh;
+    }
+    .habilidades{
+        font-size: 19px;
+    }
+    .sobreMi{
+        font-size: 19px;
+    }
+    .redessobremi{
+        font-size: 19px;
+    }
+}
+/*!550px */
+@media (max-width:550px){
+    .sobre-mi-principal{
+        margin-left: 12vh;
+    }
+    .parrafo-container{
+        margin-left: 12vh;
         width: 65%;
-        margin-bottom: 5vh;
+    }
+    .habilidades{
+        margin-right: 23vh;
+    }
+    .parrafo-container-habilidades{
+        margin-left: 12vh;
+        width: 65%;
+    }
+    .redesSocialesSobreMi{
+        width: 65%;
+        margin-left: 12vh;
+    }
+    .redesSociales-sobremi{
+        margin-left: 12vh;
+    }
+}
+/*! 500px*/
+@media (max-width:500px){
+    .mis-habilidades{
+        margin-right:11vh ;
+    }
+    .Tarjetas{
+        flex-direction: column;
+       margin-left: 5vh;
+    }
+}
+
+/*! 450px */
+@media (max-width:450px){
+    .parrafo-container{
+        margin-left: 9vh;
+        width: 70%;
+    }
+    .sobre-mi-principal{
+        margin-left: 9vh;
+    }
+    .parrafo-container-habilidades{
+        margin-left: 9vh;
+        width: 70%;
     }
     .habilidad{
         padding: 3px;
     }
     .mis-habilidades{
-        margin-right: 23vh;
-    }
-    .redesSociales-sobremi{
-        margin-left: 8vh;
-        margin-top:5vh;
+        margin-right: 8vh;
     }
     .redesSocialesSobreMi{
-        margin-left: 8vh;
-        width: 65%;
+        width: 70%;
+        margin-left: 9vh;
     }
-    .paraAcomodarLasRedes{
-        justify-content: start;
+    .redesSociales-sobremi{
+        margin-left: 9vh;
+    }
+    .Tarjetas{
+        flex-direction: column;
+       margin-left: 5vh;
+    }
+}
+/*! 440px*/
+@media (max-width: 440px){
+    .mis-habilidades{
+        margin-right: 7vh;
+    }
+    .Tarjetas{
+        flex-direction: column;
+       margin-left: 5vh;
+    }
+}
+/*! 430px*/
+@media (max-width:430px){
+    .mis-habilidades{
+        margin-right: 6vh;
+    }
+    .Tarjetas{
+        flex-direction: column;
+       margin-left: 5vh;
+    }
+}
+/*! 420px*/
+@media(max-width: 420px){
+    .mis-habilidades{
+        margin-right: 5vh;
+    }
+    .Tarjetas{
+        flex-direction: column;
+       margin-left: 5vh;
+    }
+}
+/*! 410px*/
+@media (max-width: 410px){
+    .mis-habilidades{
+        margin-right: 3vh;
+    }
+    .Tarjetas{
+        flex-direction: column;
+       margin-left: 5vh;
+    }
+}
+/*! 400px*/
+@media (max-width: 400px){
+    .sobreMi{
+        font-size: 18px;
+    }
+    .mis-habilidades{
+        margin-right: 3vh;
+    }
+    .habilidades{
+        font-size:18px ;
+    }
+    .redessobremi{
+        font-size: 18px;
+    }
+    .Tarjetas{
+        flex-direction: column;
+       margin-left: 5vh;
+    }
+}
+/*! 390px*/
+@media (max-width:390px){
+    .mis-habilidades{
+        margin-right: 2vh;
+    }
+    .Tarjetas{
+        flex-direction: column;
+       margin-left: 5vh;
+    }
+}
+/*!380px*/
+@media (max-width:380px){
+    .parrafo-container{
+        margin-left: 7vh;
+    }
+    .sobreMi{
+        font-size: 17px;
+    }
+    .sobre-mi-principal{
+        margin-left: 7vh;
+    }
+    .parrafo-container-habilidades{
+        margin-left: 7vh;
+        
+    }
+    .habilidad{
+        padding: 2px;
+        font-size: 15px;
+    }
+    .mis-habilidades{
+        margin-right: 3vh;
+    }
+    .habilidades{
+        font-size: 17px;
+    }
+    .redesSocialesSobreMi{
+        margin-left: 7vh;
+    }
+    .redesSociales-sobremi{
+        margin-left: 7vh;
+    }
+    .redessobremi{
+        font-size: 17px;
+    }
+    .Tarjetas{
+        flex-direction: column;
+       margin-left: 5vh;
+    }
+}
+/*! 370px */
+@media (max-width: 370px){
+    .sobreMi{
+        font-size: 16px;
+    }
+    .mis-habilidades{
+        margin-right: 2vh;
+    }
+    .habilidades{
+        font-size: 16px;
+    }
+    .redessobremi{
+        font-size: 16px;
+    }
+}
+/*! 350px*/
+@media(max-width: 350px){
+    .mis-habilidades{
+        margin-right: 0vh;
+    }
+    .Tarjetas{
+        flex-direction: column;
+       margin-left: 5vh;
     }
 }
